--- a/style/main.css
+++ b/style/main.css
@@ -14,6 +14,10 @@ padding:0;
 margin:0;
 }
 
+.hidden {
+display:none;
+}
+
 div#wrap {
 /*width:100%;
 height:auto;
@@ -35,7 +39,7 @@ padding:40px 0 10px 0;
 border-bottom:#fff solid 1px;
 }
 
-div#logo {
+a#logo {
 display:block;
 float:left;
 width:600px;
@@ -43,6 +47,8 @@ height:41px;
 background-image:url(../img/logo.png);
 background-repeat:no-repeat;
 background-position:0 0;
+border:none;
+outline:none;
 }
 
 div#card {
@@ -113,7 +119,7 @@ color:#797979;
 }
 
 div#bonus-area-input input.bonus-input-focus {
-color:#434343;
+color:#252525;
 }
 
 #bonus-link-check:hover {
