написание js скриптов для ajax запросов и обработка ответа на стороне клиента. верстка окна с ответом от сервера. исправление ошибок. доработка.

--- a/style/main.css
+++ b/style/main.css
@@ -84,10 +84,86 @@ background:#111;
 -moz-border-radius: 3px;
 -webkit-border-radius: 3px;
 border-radius: 3px;
--moz-box-shadow:#000 0 0 3px;
--webkit-box-shadow:#000 0 0 3px;
-box-shadow:#000 0 0 3px;
+-moz-box-shadow:#000 0 1px 2px;
+-webkit-box-shadow:#000 0 1px 2px;
+box-shadow:#000 0 1px 2px;
 border-top:#444 1px solid;
+border-bottom:#000 1px solid;
+}
+
+div#bonus-response-outer {
+display:none;
+float:left;
+padding:0 1px 1px 1px;
+border-bottom:#333 1px solid;
+-moz-border-radius:0 0 6px 6px;
+-webkit-border-radius:0 0 6px 6px;
+border-radius:0 0 6px 6px;
+}
+
+div#bonus-response {
+display:block;
+float:left;
+width:566px;
+padding:15px 15px 15px 15px;
+background:#ccc;
+-moz-border-radius:0 0 5px 5px;
+-webkit-border-radius:0 0 5px 5px;
+border-radius:0 0 5px 5px;
+background:url(../img/leo_bg_36.png) left top;
+}
+
+div#bonus-summ {
+display:none;
+}
+
+div#bonus-fail {
+display:none;
+}
+
+div.bonus-summ-label {
+font-family:Verdana;
+font-size:16px;
+color:#101010;
+display:block;
+float:left;
+padding:9px 0 0 0;
+}
+
+div.bonus-summ-value {
+font-family:Verdana;
+font-size:26px;
+color:#010101;
+display:block;
+float:left;
+margin:0 6px 0 10px;
+-moz-border-radius:0 0 7px 7px;
+-webkit-border-radius:0 0 7px 7px;
+border-radius:0 0 7px 7px;
+-moz-text-shadow:#000 0 1px 1px;
+-webkit-text-shadow:#000 0 1px 1px;
+text-shadow:#000 0 1px 1px;
+/*border-bottom:#be2121 2px solid;*/
+/*border-bottom:#fcfcfc 2px solid;*/
+}
+
+div.bonus-summ-postfix {
+font-family:Verdana;
+font-size:16px;
+color:#101010;
+display:block;
+float:left;
+padding:7px 0 0 0;
+}
+
+div.bonus-summ-warning {
+font-family:Times New Roman;
+font-size:18px;
+font-weight:bold;
+color:#101010;
+display:block;
+float:left;
+padding:1px 0 0 0;
 }
 
 div#bonus-area-input {
@@ -205,7 +281,7 @@ background:#111;
 .content-text-perc {
 font-family:Times New Roman;
 font-size:16px;
-color:#A78432;
+color:#a78432;
 }
 
 div#bottom {
